fix findbugs all DM_[FP_]NUMBER_CTOR
git-svn-id: https://svn.exedio.com/cope/persistence/trunk@20083 e7d4fc99-c606-0410-b9bf-843393a9eab7